force-app/main/default/objects/DGP_Notification__c/DGP_Notification__c.object-meta.xml
<CustomObject>
    <label>DGP Notification</label>
    <nameField>
        <label>Notification Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DGP Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>