force-app/main/default/objects/DGP_Notification__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>