force-app/main/default/objects/DGP_Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Story Done</fullName>
            </value>
            <value>
                <fullName>Release Ready</fullName>
            </value>
            <value>
                <fullName>Code Freeze</fullName>
            </value>
            <value>
                <fullName>Release Published</fullName>
            </value>
            <value>
                <fullName>Daily Digest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>