force-app/main/default/objects/DGP_Notification__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>